# bighat-challenge

./: README.md  example.json  pyproject.toml
.github/workflows/: test.yaml
bighat_challenge/: __init__.py  dag.py
tests/: test_dag.py
